basic subscribe page

--- a/src/pub-sub/subscribe.html
+++ b/src/pub-sub/subscribe.html
@@ -39,7 +39,7 @@
           <label for="subject">
             Subscribe
           </label>
-          <button id="publish">Subscribe</button>
+          <button id="subscribe">Go</button>
         </fieldset>
       </div>
     </div>
