--- a/src/pub-sub/publish.html
+++ b/src/pub-sub/publish.html
@@ -5,11 +5,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Salamander Web</title>
-  <link rel="stylesheet" href="../styles.css">
+  <link rel="stylesheet" href="../styles/reset.css">
+  <link rel="stylesheet" href="../styles/main.css">
 </head>
 
 <body>
-  <div class="content">
+  <div id="content">
     <header>
       <h1>Salemander Web</h1>
     </header>
