--- a/src/pub-sub/subscribe.html
+++ b/src/pub-sub/subscribe.html
@@ -5,11 +5,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Salamander Web</title>
-  <link rel="stylesheet" href="../styles.css">
+  <link rel="stylesheet" href="../styles/reset.css">
+  <link rel="stylesheet" href="../styles/main.css">
 </head>
 
 <body>
-  <div class="content">
+  <div id="content">
 
     <header>
       <h1>Salemander Web</h1>
@@ -50,18 +51,19 @@
             Subscribe
           </label>
         </div>
+        <div class="col">
+          <button id="subscribe">Go</button>
+        </div>
       </div>
 
       <div class="row">
-        <button id="subscribe">Go</button>
       </div>
-
     </section>
 
-    <div id="result">
+    <section class="results">
       <h3>Messages will be printed below</h3>
       <div id="output"></div>
-    </div>
+    </section>
   </div>
 
   <script type="module" src="./subscribe.js"></script>
