update home page with links

--- a/index.html
+++ b/index.html
@@ -3,9 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Salamander Web</title>
+  <link rel="stylesheet" href="./src/styles/reset.css">
+  <link rel="stylesheet" href="./src/styles/main.css">
 </head>
 <body>
-  <h1>Github Pages!</h1>
+  <h1>Salamander Web</h1>
+
+  <h3>Try out one of these POCs</h3>
+
+  <div>
+    <span class="instructions">Basic pub-sub functionality with nats.io</span>
+    <a href="./src/pub-sub/publish.html">publish.html</a>
+    <a href="./src/pub-sub/subscribe.html">subscribe.html</a>
+  </div>
 </body>
 </html>
