--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,15 +8,23 @@
   <link rel="stylesheet" href="./src/styles/reset.css">
   <link rel="stylesheet" href="./src/styles/main.css">
 </head>
+
 <body>
   <h1>Salamander Web</h1>
 
   <h3>Try out one of these POCs</h3>
 
   <div>
-    <span class="instructions">Basic pub-sub functionality with nats.io</span>
-    <a href="./src/pub-sub/publish.html">publish.html</a>
-    <a href="./src/pub-sub/subscribe.html">subscribe.html</a>
+    <span class="instructions mb-16">Basic pub-sub functionality with nats.io</span>
+    <ul>
+      <li>
+        <a href="./src/pub-sub/publish.html">publish.html</a>
+      </li>
+      <li>
+        <a href="./src/pub-sub/subscribe.html">subscribe.html</a>
+      </li>
+    </ul>
   </div>
 </body>
+
 </html>
