--- a/src/pub-sub/publish.html
+++ b/src/pub-sub/publish.html
@@ -58,6 +58,9 @@
       <div class="row">
         <button id="publish">Publish</button>
       </div>
+      <div class="row">
+        <div id="output"></div>
+      </div>
     </section>
   </div>
 
