--- a/src/pub-sub/subscribe.html
+++ b/src/pub-sub/subscribe.html
@@ -30,7 +30,7 @@
           </label>
         </div>
         <div class="col">
-          <input type="text" value="ws://0.0.0.0:4224" id="nats-url">
+          <input type="text" value="" id="nats-url">
         </div>
       </div>
 
