log and error containers

--- a/src/pub-sub/publish.html
+++ b/src/pub-sub/publish.html
@@ -60,12 +60,20 @@
       </div>
     </section>
 
-    <section>
+    <section class="mt-16">
       <div class="row">
         <button id="publish" disabled>Publish</button>
       </div>
-      <div class="row">
-        <div id="output"></div>
+    </section>
+
+    <section id="output-wrapper" class="mt-16">
+      <div class="output">
+        <h4>Log</h4>
+        <div id="log"></div>
+      </div>
+      <div class="output">
+        <h4>Errors</h4>
+        <div id="errors"></div>
       </div>
     </section>
   </div>
