--- a/src/pub-sub/publish.html
+++ b/src/pub-sub/publish.html
@@ -69,7 +69,7 @@
     <section id="output-wrapper" class="mt-16">
       <div class="output">
         <h4>Log</h4>
-        <div id="log"></div>
+        <div id="logs"></div>
       </div>
       <div class="output">
         <h4>Errors</h4>
