--- a/index.html
+++ b/index.html
@@ -10,21 +10,24 @@
 </head>
 
 <body>
-  <h1>Salamander Web</h1>
+  <div id="content">
+    <header>
+      <h1>Salemander Web</h1>
+    </header>
 
-  <h3>Try out one of these POCs</h3>
+    <h4>Try out one of these POCs</h4>
 
-  <div>
-    <span class="instructions mb-16">Basic pub-sub functionality with nats.io</span>
-    <ul>
-      <li>
-        <a href="./src/pub-sub/publish.html">publish.html</a>
-      </li>
-      <li>
-        <a href="./src/pub-sub/subscribe.html">subscribe.html</a>
-      </li>
-    </ul>
-  </div>
+    <div>
+      <span class="instructions mb-16">Basic pub-sub functionality with nats.io</span>
+      <ul>
+        <li>
+          <a href="./src/pub-sub/publish.html">publish.html</a>
+        </li>
+        <li>
+          <a href="./src/pub-sub/subscribe.html">subscribe.html</a>
+        </li>
+      </ul>
+    </div>
 </body>
 
 </html>
